tests/spec/emit/snapshots/array_zero_value_zeroless_element_emits_empty_literal.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  struct S {
    refs: Array<Ref<int>, 0>,
    n: int,
  }
  
  fn make() -> S {
    S { n: 1, .. }
  }
---
package main

type S struct {
	refs [0]*int
	n    int
}

func make_() S {
	return S{
		n:    1,
		refs: [0]*int{},
	}
}
