tests/spec/emit/snapshots/cast_byte_to_string.snap
---
source: tests/spec/emit/functions.rs
description: "input: \nfn test() -> string {\n  let b: byte = 65;\n  b as string\n}\n"
---
package main

func test() string {
	var b byte = 65
	return string(b)
}
