tests/spec/emit/snapshots/direct_tuple_field_stays_expanded.snap
---
source: tests/spec/emit/types.rs
description: "\nstruct Holder { p: (int, int) }\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Holder struct {
	p lisette.Tuple2[int, int]
}
