tests/spec/emit/snapshots/emit_fstring_multiline_text.snap
---
source: tests/spec/emit/literals.rs
assertion_line: 609
description: "input: \nfn test(name: string) -> string {\n  f\"hello\n{name}\nworld\"\n}\n"
---
package main

import "fmt"

func test(name string) string {
	return fmt.Sprintf("hello\n%v\nworld", name)
}
