tests/spec/emit/snapshots/emit_raw_string_multiline_via_backtick.snap
---
source: tests/spec/emit/literals.rs
assertion_line: 597
description: "input: \nfn test() -> string {\n  let s = r\"a\nb\"\n  s\n}\n"
---
package main

func test() string {
	s := `a
b`
	return s
}
